[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dune-orm"
version = "0.1.2"
description = "A Django-style ORM for querying Dune Analytics via Python."
readme = "./README.md"
authors = [
  { name="Andre de Jesus", email="dejesusandre0226@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "requests>=2.0"
]

[project.urls]
Homepage = "https://github.com/ardey26/dune-orm"
Repository = "https://github.com/ardey26/dune-orm"