[project]
name = "dune_orm"
version = "0.1.9"
authors = [
  { name="Andre de Jesus", email="dejesusandre0226@gmail.com" },
]

dependencies = [
  "requests==2.32.4"
]

description = "A Django-style ORM for querying Dune Analytics with fluent, chainable Python syntax."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ardey26/dune-orm"